style.css
body {
    font:normal 8pt/normal 'Comic Sans MS',Verdana,sans-serif;
    margin:0;
    text-transform:none;
    text-decoration:none;
    background:#f8fcff url(/images/bg_gradient.jpg) repeat-x top;
    text-align: center;
}

#master {
    width: 100%;
    background: url(/images/bg_clouds.jpg) no-repeat center top;
}

#container {

    margin: 0 auto;
    width: 900px;
    text-align: center;

}

#header {
    margin: 0 auto;
    border-top: solid 1px #000;
    color: White;
    font-weight: bold;
    width: 900px;
    text-align: center;
}

#banner {
    background-image: url(/images/banner.png);
    background-repeat: no-repeat;
    border-bottom: solid 1px #000;
    border-left: solid 1px #000;
    border-right: solid 1px #000;
    height: 72px;
    text-align: center;
}

.legalese {
    font-size: 6;
}

#signPane {

    border: solid 1px Black;
    width: 600px;
    height: 400px;
    background-color: #eee;
    font-size: 12;

}

#signPane h5 {

    background-color: #ccc;
    font-family: Verdana;
    font-size: 72;
    border-bottom: solid 1px #000;
    padding: 10px;
    margin: 0;

}

.signbox {

    border-style: dashed;
    border-color: rgb(70, 70, 70);
    background-color: whitesmoke;

}

